Created directories methodsPaper and secondPaper
Adjusted the Makefiles accordingly.

--- a/secondPaper/manuscript.tex
+++ b/secondPaper/manuscript.tex
@@ -21,8 +21,8 @@
 \begin{document}
 \firstpage{1}
 
-\title[\package{}]{A comparative risk assesment of U.S. regional
-  active transport using the ITHIM model}
+\title[]{A comparative risk assessment of U.S. regional active
+  transport using the ITHIM model}
 \author[Younkin \textit{et~al}]{Samuel G. Younkin$^{1}$,
   Jason Vargo$^{1}$\footnote{to whom correspondence should be addressed},
   $\ldots$
@@ -40,38 +40,6 @@ University of Wisconsin{\textendash}Madison, Madison, WI USA\\
 
 \section{Summary:}
 
-While increased active transportation, primarily cycling and walking,
-is often held up as a goal for improved public health --- via reduced
-chronic disease, improved air quality, and reductions in greenhouse
-gas emissions — obtaining estimates for the quantiative impacts of
-such shifts remains infrequent, if not altogether absent from related
-policy action. Using U.S. metropolitan counties from seven states we
-perform a comparative risk analysis between each regions and national
-averages as the baseline.  We employ a portion of the Integrated
-Transport and Health Impacts Model (ITHIM) to investigate the reduced
-chronic disease burden of ($x$, $y$, $z$ outcomes) from changing
-levels of physical activity with population shifts in the amount of
-biking and walking done for transport. The analysis is informed by
-regional travel parameters from the National Household Transportation
-Survey, non-travel activity metrics from the American Time Use Survey,
-and baseline disease burden from the Centers for Disease Control and
-Prevention's WONDER database and the Global Burden of Disease dataset.
-Our findings show that the California and New York State have travel
-patterns that, if mirrored by the nation, would save the U.S. upwards
-of fifty thousand disability adjusted life years.
-
-%% \section{Availability:}
-
-%% %% \package{} may be explored using the user interface avaiable
-%% %% at \webpage{}.
-%% The source code and data files for \package{} are publicly available
-%% on GitHub via a link on \webpage{}.
-
-\section{Supplementary information:}
-
-See \webpage{} for links to the source code, manual, tutorial and
-links for more information about the ITHIM model.
-
 \section{Contact:}
 \href{javargo@wisc.edu}{javargo@wisc.edu}
 
@@ -79,6 +47,30 @@ links for more information about the ITHIM model.
 
 \section{Introduction}
 
+\subsection{AJPH}
+There are 12 submission categories: Research Articles, Brief
+Articles, Systematic Reviews, Letters and Responses, The Editors
+Choice, Opinion Editorials, Commentaries, Analytic Essays, History
+Essays, Voices, News, and Images.
+
+Research Articles report the results of original public health
+research in up to 3500 words in the text, a structured abstract, up to
+4 tables and figures, and no more than 35 references. The text must
+have an introduction and separate sections for Methods, Results,
+Discussion, and, Public Health Implications. This format is the
+highest priority for AJPH and represents the majority of papers
+published.  Brief Articles present preliminary findings or novel
+findings in up to 1200 words in the main text, a structured (except if
+justified otherwise in the cover letter) abstract, up to 1 table or
+figure, and no more than 12 references.
+
+Research Brief Articles must have an introduction and separate
+sections for the Methods, Results, Discussion, and Public Health
+Implications. Some policy -focused Brief Articles which are shor t
+essays and do not report study results do not require the “method,
+results, discussion, public health implications” format subheadings.
+
+\subsection{Active Transport}
 Regular exercise has been shown to provide health benefits in terms of
 chronic disease prevention \cite{warburton2006}, cognitive function
 \cite{hillman2008}, and overall well being and satisfaction with life
@@ -149,22 +141,22 @@ activity is required for cycling and walking.
 
 \end{methods}
 
-\begin{figure}[t]
-    \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
-    \caption{}\label{dalyFigure}
-\end{figure}
+% \begin{figure}[t]
+%     \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig2}}
+%     \caption{}\label{dalyFigure}
+% \end{figure}
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3.pdf}}
-    \caption{Mean travel time by mode (walking/cycling) for each of
-      seven states.  National means are displayed on the
-      right.}\label{meanMatrices}
-\end{figure}
+% \begin{figure}[t]
+%   \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig3.pdf}}
+%     \caption{Mean travel time by mode (walking/cycling) for each of
+%       seven states.  National means are displayed on the
+%       right.}\label{meanMatrices}
+% \end{figure}
 
-\begin{figure}[t]
-  \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig4.pdf}}
-    \caption{}\label{California}
-\end{figure}
+% \begin{figure}[t]
+%   \centerline{\includegraphics[width=0.5\textwidth]{./figures/fig4.pdf}}
+%     \caption{}\label{California}
+% \end{figure}
 
 \section{Results}
 
